--- a/src/reactBitsComponent/CircularText/CircularText.css
+++ b/src/reactBitsComponent/CircularText/CircularText.css
@@ -1,25 +1,24 @@
 .circular-text {
-    margin: 0 auto;
+    position: absolute;
+    /* sit over the image */
+    inset: 0;
+    /* fill the imageContainer */
+    margin: 0;
     border-radius: 50%;
-    width: 350px;
-    position: relative;
-    height: 350px;
     font-weight: bold;
-    font-weight: 900;
     text-align: center;
     cursor: pointer;
     transform-origin: 50% 50%;
-    -webkit-transform-origin: 50% 50%;
-    padding: auto;
-  }
-  
-  .circular-text span {
+}
+
+.circular-text span {
     position: absolute;
-    display: inline-block;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    font-size: 24px;
-    transition: all 0.5s cubic-bezier(0, 0, 0, 1);
-  }
+    top: 50%;
+    left: 50%;
+    transform-origin: 0 0;
+    white-space: pre;
+    user-select: none;
+    pointer-events: none;
+    font-size: 1rem;
+
+}
